<resources>
    <string name="app_name">StarCrowd Investor App</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register_here">Register Here</string>
    <string name="logout">Logout</string>
    <string name="user">User</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="starcrowd_tv">StarCrowd TV</string>
    <string name="artist_search">Artist Search</string>
    <string name="watch_list">Watch List</string>
    <string name="trending">Trending</string>
    <string name="portfolio">Portfolio</string>
    <string name="home">Home</string>
</resources>