<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="nav_view">

    <item
        android:id="@+id/home_menu"
        android:title="@string/home"
        android:icon="@drawable/home" />
    <item
        android:id="@+id/portfolio_menu"
        android:title="@string/portfolio"
        android:icon="@drawable/portfolio" />
    <item
        android:id="@+id/trending_menu"
        android:title="@string/trending"
        android:icon="@drawable/trending" />
    <item
        android:id="@+id/watch_menu"
        android:title="@string/watch_list"
        android:icon="@drawable/watch_list" />
    <item
        android:id="@+id/artist_search_menu"
        android:title="@string/artist_search"
        android:icon="@drawable/artist_search" />
    <item
        android:id="@+id/starcrowd_tv_menu"
        android:title="@string/starcrowd_tv"
        android:icon="@drawable/starcrowd_tv" />
    <item
        android:id="@+id/settings_menu"
        android:title="@string/settings"
        android:icon="@drawable/settings" />
    <item
        android:id="@+id/logout_menu"
        android:title="@string/logout"
        android:icon="@drawable/logout" />
</menu>